src/styles/globals.css
@import "tailwindcss";

@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@import "./../styles/themes.css";

:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
}

.dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-sans);
  --font-serif: var(--font-serif);
  --font-mono: var(--font-mono);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
    content-visibility: auto;
  }
  button:not(:disabled),
  [role="button"]:not(:disabled) {
    cursor: pointer;
  }
}

:root {
  /* Tailwind CSS Candy cane */
  --pattern-fg: color-mix(in oklab, var(--color-foreground) 10%, transparent);
  & > * {
    @apply scrollbar-thin;
  }
}

@utility wrapper {
  @apply relative mx-auto w-full max-w-screen-xl;
}

@utility code-inline {
  @apply text-primary bg-muted relative isolate inline-flex px-1 font-mono;
}

@utility scaled {
  --text-lg: 1.05rem;
  --text-base: 0.85rem;
  --text-sm: 0.8rem;
  --spacing: 0.222222rem;

  [data-slot="card"] {
    --spacing: 0.16rem;
  }

  [data-slot="card-header"] *,
  [data-slot="card-content"] *,
  [data-slot="card-footer"] * {
    --spacing: 0.222222rem;
  }
}

@utility scrollbar-thin {
  scrollbar-width: thin;
  scrollbar-color: var(--color-border) transparent;
}

@utility grid-cols-fluid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
}

.grid-background-effect {
  --bg-height: 100vh;
  --bg-size: 32px;

  position: absolute;
  height: var(--bg-height);
  pointer-events: none;
  inset-inline: 0;
  top: 0;
  z-index: 1;

  background-size: var(--bg-size) var(--bg-size);
  background-image:
    linear-gradient(
      to right,
      color-mix(in oklch, var(--color-foreground) 4%, transparent) 1px,
      transparent 1px
    ),
    linear-gradient(
      color-mix(in oklch, var(--color-foreground) 4%, transparent) 1px,
      transparent 1px
    );

  mask-image: radial-gradient(
    ellipse 100% 100% at 50% 0%,
    #000 30%,
    transparent 100%
  );
}

.light-background-effect {
  --bg-height: 100vh;
  --gradient-background: radial-gradient(
    ellipse 60% 70% at 50% 0%,
    oklch(from var(--primary) l c h / 0.15),
    oklch(from var(--secondary) l c h / 0.1),
    transparent 100%
  );

  position: fixed;
  pointer-events: none;
  inset: 0;
  width: 100%;
  height: var(--bg-height);
  z-index: -90;

  background-image: var(--gradient-background);
  background-repeat: no-repeat;
  background-size: cover;
  filter: blur(150px);
  opacity: 0.5;
}

@property --hue {
  syntax: "<angle>";
  inherits: false;
  initial-value: 0deg;
}

.bg-rotating-gradient {
  position: absolute;
  inset: 0;
  z-index: -1;

  background-image: conic-gradient(
    oklch(70% 0.25 calc(var(--hue) + 0deg)) 0deg,
    oklch(90% 0.25 calc(var(--hue) + 60deg)) 60deg,
    oklch(70% 0.25 calc(var(--hue) + 120deg)) 120deg,
    oklch(70% 0.25 calc(var(--hue) + 180deg)) 180deg,
    oklch(60% 0.25 calc(var(--hue) + 240deg)) 240deg,
    oklch(70% 0.25 calc(var(--hue) + 300deg)) 300deg,
    oklch(70% 0.25 calc(var(--hue) + 0deg)) 360deg
  );

  animation-name: spin_gradient;
  animation-duration: 3s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

@keyframes spin_gradient {
  from {
    --hue: 0deg;
  }
  to {
    --hue: 360deg;
  }
}

